updated header_bg name

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ img {
     border-radius: 5px 5px 0px 0px;
 }
 #bg-head { 
-	background-image: url("../img/_d7fe023e-bc03-43b8-8b24-3c8cb78ab08e.jpeg");
+	background-image: url("../img/header_bg.jpeg");
 	background-size:cover; 
 	height: 275px; 
 	width:auto;
